--- a/src/rendaVariavel.css
+++ b/src/rendaVariavel.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #005fef;
     color: #fff;
     text-align: center;
     padding: 20px;
