--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,18 @@ header h1 {
     height: auto; /* Mantenha a proporção da imagem */
 }
 
-
+.button-container {
+    text-align: center;
+}
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0074d9;
+    color: #fff;
+    text-decoration: none;
+    margin: 10px;
+    border-radius: 5px;
+}
 
 /* Estilos para seções de fundos imobiliários e ações */
 section {
